--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,23 @@
     <string name="menu_order">Order</string>
     <string name="menu_contact_info">Contact Info</string>
     <string name="menu_company_info">Company Info</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_f_a_q">FAQs</string>
     <string name="label_fragment_home">Home</string>
     <string name="label_fragment_flavours">Flavours</string>
+
+    <string name="question_one">Do you have lactose free ice cream? </string>
+    <string name="question_two">Is your ice cream nut free? </string>
+    <string name="question_three">Do you offer deals?</string>
+    <string name="question_four">What are your store timings?</string>
+    <string name="question_five">Does your restaurant have any other locations?</string>
+    <string name="question_six">Do you do deliveries?</string>
+    <string name="answer_one">Yes we offer lactose free alternatives. Just ask!</string>
+    <string name="answer_two">There are certain flavours containing nuts while others don’t. Ice cream can be ordered without nuts if preferred.</string>
+    <string name="answer_three">Deals are sometimes mailed and can be found by signing up on our app. We often offer seasonal promotions so look out for those as well,</string>
+    <string name="answer_four">Monday – Thursday: 10:00 am – 10:00 pm
+Friday – Sunday: 10:00 am – 11:00 pm
+</string>
+    <string name="answer_five">No we do not have other location.</string>
+    <string name="answer_six">While we don’t offer delivery through our app or website we are partnered with UberEATS and door dash so orders can be made through there.</string>
+
 </resources>
