--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="menu_company_info">Company Info</string>
     <string name="menu_ice_cream">Ice Cream</string>
     <string name="menu_f_a_q">FAQs</string>
+    <string name="menu_desc">Description</string>
     <string name="label_fragment_home">Home</string>
     <string name="label_fragment_flavours">Flavours</string>
 
@@ -42,8 +43,6 @@ Friday – Sunday: 10:00 am – 11:00 pm
     <string name="plum_title">Plum Flavour</string>
     <string name="chocolate_title">Chocolate Flavour</string>
     <string name="cookie_cream_title">Cookie and Cream</string>
-
-
 
 
 </resources>
