--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@ Friday – Sunday: 10:00 am – 11:00 pm
 
     <string name="phone">Phone</string>
     <string name="email_button">Email</string>
-    <string name="address">Buying Location</string>
+    <string name="address">Address</string>
     <string name="facebook">FaceBook</string>
 
 
