--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@ Friday – Sunday: 10:00 am – 11:00 pm
     <string name="email_button">Email</string>
     <string name="address">Address</string>
     <string name="facebook">FaceBook</string>
-
+    <string name="shop_name">Bright Fried IceCream</string>
 
 
 </resources>
